# MUEAVI_SDK

./: CMakeLists.txt  License.txt  README.md  cmakescript  makescript
cmake/: FindDarkNet.cmake  FindJsonC.cmake  FindProtobuf.cmake  FindQuanergyClient.cmake  FindUdt.cmake  FindUrg.cmake
devices/: CMakeLists.txt
devices/imu/: CMakeLists.txt  imu.cpp
devices/lidar/: CMakeLists.txt  lidar.cpp  quanergym8.cpp  urg2d.cpp  urg3d.cpp
devices/ptzcam/: CMakeLists.txt  ptzcam.cpp
devices/radar/: CMakeLists.txt  radar.cpp
docs/: CMakeLists.txt
headers/: CMakeLists.txt  common.hpp  imgdet.hpp  imu.hpp  pcl_pointxyzir.hpp  profiling.hpp  ptzcam.hpp  quanergym8.hpp  radar.hpp  system.hpp  timestamp.hpp  urg2d.hpp
install/include/: common.hpp  file.hpp  imu.hpp  lidar.hpp  mathformat.hpp  nas.hpp  pkg.hpp  ptzcam.hpp  tcp.hpp  udp.hpp  urg2d.hpp  urg3d.hpp
install/lib/: libMUEAVISOFT_LIB.so.0.1.0
system/: CMakeLists.txt
system/common/: CMakeLists.txt  debug.cpp  file.cpp  mathformat.cpp  profiling.cpp  system.cpp
system/display/: CMakeLists.txt
system/keyboard/: CMakeLists.txt
system/network/: CMakeLists.txt  curl.cpp  nas.cpp  pkg.cpp  tcp.cpp  udp.cpp
system/objectdetect/: CMakeLists.txt
system/objectdetect/lidar/: pcldet.cpp
system/objectdetect/ptzcam/: imgdet.cpp
system/objectdetect/radar/: dopdet.cpp
system/objecttrack/: CMakeLists.txt
system/synchronize/: CMakeLists.txt  timestamp.cpp
system/trajectorypredict/: CMakeLists.txt
test/: CMakeLists.txt  test_all_thread.cpp  test_client_thread.cpp  test_client_thread.hpp  test_imu_thread.cpp  test_imu_thread.hpp  test_lidar_thread.cpp  test_lidar_thread.hpp  test_nas_thread.cpp  test_nas_thread.hpp  test_ptzcam_thread.cpp  test_ptzcam_thread.hpp  test_radar_thread.cpp  test_radar_thread.hpp  test_server_thread.cpp  test_server_thread.hpp  test_tcp_thread.cpp  test_tcp_thread.hpp  test_udp_thread.cpp  test_udp_thread.hpp  test_udt_thread.cpp  test_udt_thread.hpp
